BPER/DEVF/force-app/main/default/objects/External_Routing_Bean__c/External_Routing_Bean__c.object-meta.xml
<CustomObject>
    <label>External Routing Bean</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>External Routing Bean Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>External Routing Beans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>