BPER/DEVF/force-app/main/default/objects/External_Routing_Bean__c/fields/Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Agent_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agent Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>