BPER/DEVF/force-app/main/default/objects/External_Routing_Bean__c/fields/Interaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Interaction_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Interaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>