BPER/DEVF/force-app/main/default/objects/External_Routing_Bean__c/fields/PreChat_Id__c.field-meta.xml
<CustomField>
    <fullName>PreChat_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PreChat Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>